# snapvrt

./: .gitignore  LICENSE  README.md
dev/: 001-architecture.md  002-project-structure.md  003-rust-crates.md  004-protocols.md  005-cli-design.md  007-decisions.md  008-screenshot-capture.md  009-audit.md  README.md  ROADMAP.md  architecture.md
dev/archive/: 002-project-structure.md  003-rust-crates.md  004-protocols.md  006-js-packages.md  007-decisions.md  010-docker-first.md
docs/: ci-integration.md  cli-reference.md  configuration.md  getting-started.md
examples/storybook-basic/: package-lock.json  package.json
examples/storybook-basic/.storybook/: main.ts
rust/: Cargo.toml  README.md  TODO.md
rust/.snapvrt/: .gitignore  config.toml
rust/crates/snapvrt/: Cargo.toml
rust/crates/snapvrt/src/: cli.rs  main.rs
rust/crates/snapvrt/src/capture/: job.rs  mod.rs  pipeline.rs  plan.rs  runner.rs  scripts.rs  strategy.rs  timing.rs
rust/crates/snapvrt/src/cdp/: chrome.rs  connection.rs  mod.rs
rust/crates/snapvrt/src/commands/: approve.rs  init.rs  mod.rs  prune.rs  review.rs  test.rs  update.rs
rust/crates/snapvrt/src/compare/: diff.rs  mod.rs
rust/crates/snapvrt/src/config/: capture.rs  mod.rs  resolve.rs  template.rs
rust/crates/snapvrt/src/report/: html.rs  mod.rs  terminal.rs
rust/crates/snapvrt/src/store/: mod.rs
rust/crates/snapvrt/src/storybook/: discovery.rs  mod.rs
rust/crates/snapvrt/src/typst/: mod.rs
rust/poc/: CDP-COMPARISON.md
rust/poc/cdp-chromiumoxide/: Cargo.toml  README.md
rust/poc/cdp-chromiumoxide/src/: browser.rs  main.rs  screenshot.rs
rust/poc/cdp-headless_chrome/: Cargo.toml  README.md
rust/poc/cdp-headless_chrome/src/: main.rs
rust/poc/cdp-raw/: Cargo.toml  README.md
rust/poc/cdp-raw/src/: capture.rs  cdp.rs  chrome.rs  lib.rs  main.rs
rust/poc/image-diff/: Cargo.toml  README.md
rust/poc/image-diff/src/: engine_dify.rs  engine_pixel.rs  engine_ssim.rs  lib.rs  main.rs
rust/poc/storybook-discovery/: Cargo.toml
rust/poc/storybook-discovery/src/: discovery.rs  main.rs
(+1 files in other folders)
