[workspace]
resolver = "3"
members = ["poc/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/snapvrt/snapvrt"

[workspace.dependencies]
headless_chrome = "1.0"
chromiumoxide = { version = "0.8", features = ["tokio-runtime"], default-features = false }
tokio = { version = "1.49", features = ["rt-multi-thread", "macros", "process", "io-util", "time"] }
tokio-tungstenite = "0.28"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
base64 = "0.22"
reqwest = { version = "0.13", features = ["json"] }
thiserror = "2.0"
image = "0.25"
dify = "0.8"
image-compare = "0.5"
