[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/snapvrt/snapvrt"

[workspace.dependencies]
tokio = { version = "1.49", features = ["rt-multi-thread", "macros", "process", "io-util", "time"] }
tokio-tungstenite = "0.28"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
base64 = "0.22"
reqwest = { version = "0.13", features = ["json"] }
thiserror = "2.0"
image = "0.25"
dify = "0.8"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
