[package]
name = "snapvrt"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tokio.workspace = true
tokio-tungstenite.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
anyhow.workspace = true
thiserror.workspace = true
base64.workspace = true
reqwest.workspace = true
image.workspace = true
dify.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
